tests/chapter_17/valid/sizeof/sizeof_type.c
int main(void) {
  // get size of type name
  return sizeof(long signed);
}