tests/chapter_17/invalid_types/void/define_void.c
int main(void) {
    // can't define a void object
    void x;
    return 0;
}